[package]
name = "linux-toolkit"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
byteorder = "*"
memmap = "*"
nix = "*"
rand = "*"

[dependencies.wayland-client]
version = "*"
path = "../wayland-rs/wayland-client"

[dependencies.wayland-protocols]
version = "*"
path = "../wayland-rs/wayland-protocols"
features = ["client", "unstable_protocols"]

[dependencies.xkbcommon]
version = "*"
path = "../xkbcommon-rs"
features = ["compose", "wayland"]
